--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -461,7 +461,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   margin-bottom: 40px;
-  overflow: hidden;
+  padding-bottom: 20px;
 }
 
 .donation-wrapper .donation-column-wrapper {
@@ -959,6 +959,9 @@ body {
   .info-banner-avantage p {
     font-size: 5vw;
     margin-bottom: 40px;
+  }
+  .donation-wrapper {
+    overflow: hidden;
   }
   .donation-wrapper .donation-title {
     font-size: 7vw;
